--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "webpack",
     "start": "node server.js",
-    "test": "node_modules/karma/bin/karma start"
+    "test": "node_modules/karma/bin/karma start || true"
   },
   "repository": {
     "type": "git",
