--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "webpack",
     "start": "node server.js",
-    "test": "node_modules/karma/bin/karma start || true"
+    "test": "node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
+    "karma": "^1.7.0",
     "mocha": "^3.4.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
