--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
     "karma": "^1.7.0",
+    "karma-mocha": "^1.3.0",
     "mocha": "^3.4.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
