--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
     "karma": "^1.7.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-webpack": "^2.0.4",
     "mocha": "^3.4.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -40,6 +42,8 @@
     "eslint-plugin-node": "^5.1.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-webpack": "^2.0.4"
   }
 }
