--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
+    "karma": "^1.7.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-webpack": "^2.0.4"
   }
