--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ language: node_js
 node_js: 
   - 6
 
-before_install:
-  -  export DISPLAY=localhost:0.0
+# Without this: ERR - No display specified.
+# With this: ERR - Cannot open display.
+#before_install:
+#  -  export DISPLAY=localhost:0.0
