--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ language: node_js
 node_js: 
   - 6
 
-before_install:
-  -  export DISPLAY=localhost:0.0
+before_script:
+  -  export DISPLAY=:99.0
+  -  sh -e /etc/init.d/xvfb start
