Add the karma babel preprocessor.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-webpack": "^2.0.4"
   }
