--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
     "karma": "^1.7.0",
+    "karma-babel-preprocessor": "^6.0.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.4",
