--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-middleware": "^1.11.0"
   },
   "devDependencies": {
+    "enzyme": "^2.9.1",
     "eslint": "^4.2.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -47,6 +48,8 @@
     "karma": "^1.7.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-firefox-launcher": "^1.0.1",
-    "karma-webpack": "^2.0.4"
+    "karma-webpack": "^2.0.4",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0"
   }
 }
