--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
+    "global": "^4.3.2",
     "karma": "^1.7.0",
     "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chai-plugins": "^0.9.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.4",
