--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "./node_modules/.bin/karma start --browsers Firefox --single-run"
   },
   "repository": {
+    "global": "^4.3.2",
     "type": "git",
     "url": "git+https://github.com/benedictwagnall/project-react.git"
   },
@@ -24,20 +25,16 @@
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "express": "^4.15.3",
     "karma": "^1.7.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.4",
-    "mocha": "^3.4.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
   },
   "devDependencies": {
-    "enzyme": "^2.9.1",
     "eslint": "^4.2.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -45,14 +42,10 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
-    "global": "^4.3.2",
     "karma": "^1.7.0",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-chai": "^0.1.0",
-    "karma-chai-plugins": "^0.9.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-webpack": "^2.0.4",
-    "react": "^15.6.1",
-    "react-addons-test-utils": "^15.6.0"
+    "react": "^15.6.1"
   }
 }
