--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.4",
-    "mocha": "^3.4.2",
-    "react-addons-test-utils": "^15.6.0"
+    "mocha": "^3.4.2"
   }
 }
