--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-loader": "^7.1.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "express": "^4.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^3.0.0",
@@ -46,6 +45,8 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-webpack": "^2.0.4",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "react-addons-test-utils": "^15.6.0",
+    "react-test-renderer": "^15.6.1"
   }
 }
