Attempt codeclime fix

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,7 +8,9 @@ engines:
       - .js
     ratings:
       paths:
-      - "src/**.js"
+      - src/**
+      - project_react/**
+      - "**.js"
 
   duplication:
     enabled: true
