--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sinon": "^3.2.1",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
   },
@@ -44,9 +45,11 @@
     "karma-chai": "^0.1.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-sinon": "^1.0.5",
     "karma-webpack": "^2.0.4",
     "mocha": "^3.4.2",
     "react-addons-test-utils": "^15.6.0",
-    "react-test-renderer": "^15.6.1"
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^3.2.1"
   }
 }
